Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110941

wasm: MultiPointTouchArea loses all touchpoints after just one is released

    XMLWordPrintable

Details

    • WebAssembly
    • 56068f3a3 (dev), db26a9c39 (6.5)

    Description

       

       

       

      https://forum.qt.io/topic/142575/qt-for-webassembly-multipointtoucharea-loses-all-touchpoints-after-just-one-is-released

       

      When using declarative multi touch, when one point is released, it loses all of them.

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lpotter Lorn Potter
            lpotter Lorn Potter
            Votes:
            2 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes