wasm: fix multitouch processing

Not all touch points are changed as per emscripten event, so we
do not need to remove or add them to the touch event

Fixes: QTBUG-110941
Change-Id: I4799ef0c05750a36361836698eb83e5bf844ece8
Reviewed-by: Mikołaj Boc <Mikolaj.Boc@qt.io>
(cherry picked from commit 56068f3a36a2f8e23a2a5e43a28e463a5aa6b400)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>